--- a/vdf/Cargo.toml
+++ b/vdf/Cargo.toml
@@ -22,11 +22,19 @@ license = "Apache-2.0"
 edition = "2018"
 description = "An implementation of Verifiable Delay Functions (VDFs) in Rust"
 
+[lib]
+crate-type = ["lib", "cdylib"]
+name = "vdf"
+
 [dependencies]
 classgroup = { path = "../classgroup", version = "^0.1.0" }
 num-traits = "0.2"
 sha2 = "0.8"
 bit-vec = "0.5"
+uniffi = {  version= "0.25", features = ["cli"]}
+
+[build-dependencies]
+uniffi = { version = "0.25", features = [ "build" ] }
 
 [dev-dependencies]
 criterion = ">=0.2"
